--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
